welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {
^PatternPicture:1: error: expected start of definition
override def run() {
         ^PatternPicture:6: error: expected class or object definition
def faireC(c:Color) {
^PatternPicture:23: error: expected class or object definition
def motif(){
^